Fixed link align in header and footer

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,7 @@
   gap: 48px;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 @media screen and (max-width: 768px) {
